# suika-hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  server.py  suika.py  test_imports.py
.github/workflows/: ci.yml  publish.yml
configs/: example_redstorm.json
core/: __init__.py  ai_analyzer.py  browser.py  config.py  decision_engine.py  engine.py  formatters.py  har_parser.py  http.py  module.py  plugin.py  reporter.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
modules/: __init__.py  api_fuzzer.py  auth_bypass.py  idor.py  recon.py  redstorm.py  ssrf_scanner.py  upload_scanner.py
plugins/templates/: __init__.py  plugin.json  requirements.txt  scanner.py  setup_example.py
scripts/: verify_imports.py
suika_hub/: __init__.py  cli.py  server.py
suika_hub/core/: __init__.py  ai_analyzer.py  browser.py  config.py  decision_engine.py  engine.py  har_parser.py  http.py  module.py  reporter.py
suika_hub/modules/: __init__.py  api_fuzzer.py  auth_bypass.py  idor.py  recon.py  redstorm.py  ssrf_scanner.py  upload_scanner.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_formatters.py  test_http.py  test_module.py  test_plugin.py  test_reporter.py  test_suika_hub.py
tests/test_modules/: test_api_fuzzer.py  test_auth_bypass.py  test_idor.py  test_recon.py  test_redstorm.py  test_ssrf_scanner.py  test_upload_scanner.py
